--- a/views/vehicle-registration-form.ejs
+++ b/views/vehicle-registration-form.ejs
@@ -383,16 +383,17 @@
 								"/vehicles/".concat(vehicle._id).concat("/photos/1")
 								: "/static/img/image-placeholder.png"%>"
 						>
-							<div class="caption">
-								<h4 >Photo 1</h4>
-								<p>
-									<input type="file" class="bootandbonnet-input-file" name="photo1"
-										   title="Browse" accept="images/*" />
-									<button type="button" class="btn-link bootandbonnet-remove-file">
-										Remove
-									</button>
-								</p>
-							</div>
+						<div class="caption">
+							<h4 >Photo 1</h4>
+							<p>
+								<input type="file" class="bootandbonnet-input-file" name="photo1"
+										title="Browse" accept="images/*" />
+								<button type="button" name="btnphoto1" class="btn-link bootandbonnet-remove-file">
+									Remove
+								</button>
+							</p>
+						</div>
+						<input type="hidden" name="oldphoto1" class="bootandbonnet-old-photo">
 					</div>
 				</li>
 				<li class="span3">
@@ -402,16 +403,17 @@
 								"/vehicles/".concat(vehicle._id).concat("/photos/2")
 								: "/static/img/image-placeholder.png"%>"
 						>
-							<div class="caption">
-								<h4>Photo 2</h4>
-								<p>
-									<input type="file" class="bootandbonnet-input-file" name="photo2"
-										   title="Browse" accept="images/*" />
-									<button type="button" class="btn-link bootandbonnet-remove-file">
-										Remove
-									</button>
-								</p>
-							</div>
+						<div class="caption">
+							<h4>Photo 2</h4>
+							<p>
+								<input type="file" class="bootandbonnet-input-file" name="photo2"
+										title="Browse" accept="images/*" />
+								<button type="button" name="btnphoto2" class="btn-link bootandbonnet-remove-file">
+									Remove
+								</button>
+							</p>
+						</div>
+						<input type="hidden" name="oldphoto2" class="bootandbonnet-old-photo">
 					</div>
 				</li>
 				<li class="span3">
@@ -421,16 +423,17 @@
 								"/vehicles/".concat(vehicle._id).concat("/photos/3")
 								: "/static/img/image-placeholder.png"%>"
 						>
-							<div class="caption">
-								<h4>Photo 3</h4>
-								<p>
-									<input type="file" class="bootandbonnet-input-file" name="photo3"
-										   title="Browse" accept="images/*" />
-									<button type="button" class="btn-link bootandbonnet-remove-file">
-										Remove
-									</button>
-								</p>
-							</div>
+						<div class="caption">
+							<h4>Photo 3</h4>
+							<p>
+								<input type="file" class="bootandbonnet-input-file" name="photo3"
+										title="Browse" accept="images/*" />
+								<button type="button" name="btnphoto3" class="btn-link bootandbonnet-remove-file">
+									Remove
+								</button>
+							</p>
+						</div>
+						<input type="hidden" name="oldphoto3" class="bootandbonnet-old-photo">
 					</div>
 				</li>
 				<li class="span3">
@@ -440,16 +443,17 @@
 								"/vehicles/".concat(vehicle._id).concat("/photos/4")
 								: "/static/img/image-placeholder.png"%>"
 						>
-							<div class="caption">
-								<h4>Photo 4</h4>
-								<p>
-									<input type="file" class="bootandbonnet-input-file" name="photo4"
-										   title="Browse" accept="images/*" />
-									<button type="button" class="btn-link bootandbonnet-remove-file">
-										Remove
-									</button>
-								</p>
-							</div>
+						<div class="caption">
+							<h4>Photo 4</h4>
+							<p>
+								<input type="file" class="bootandbonnet-input-file" name="photo4"
+										title="Browse" accept="images/*" />
+								<button type="button" name="btnphoto4" class="btn-link bootandbonnet-remove-file">
+									Remove
+								</button>
+							</p>
+						</div>
+						<input type="hidden" name="oldphoto4" class="bootandbonnet-old-photo">
 					</div>
 				</li>
             </ul>
