Progress made with IssueID #19.

--- a/views/vehicle-registration-form.ejs
+++ b/views/vehicle-registration-form.ejs
@@ -373,6 +373,8 @@
 	<fieldset id="photos">
 		<legend>Photos</legend>
 
+		<input type="hidden" name="deletedPhotos" value="[]">
+
 		<div class="row">
 			<div class="span12">
             <ul class="thumbnails">
