--- a/views/vehicle-registration-form.ejs
+++ b/views/vehicle-registration-form.ejs
@@ -510,6 +510,6 @@
 
 	<div class="form-actions">
 		<button type="submit" class="btn btn-primary" ><%=buttonCaption%></button>
-		<button type="button" class="btn" id="cancelButton" >Cancel</button>
+		<button type="button" class="btn btn-default" id="cancelButton" >Cancel</button>
 	</div>
 </form>
