--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,61 +1,70 @@
 <!DOCTYPE html>
 <html>
     <head>
-	<title>Boot and Bonnet</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<%-stylesheets%>
-	<style>
-	    body {
-		padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-	    }
-	</style>
+		<title>Boot&Bonnet</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="/static/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" />
+		<%-stylesheets%>
+		<style>
+			body {
+				padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+			}
+		</style>
+		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+			<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+		<![endif]-->
 	</head>
     <body>
-	<div class="navbar navbar-fixed-top">
-	    <div class="navbar-inner">
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">boot&bonnet</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="#">Home</a></li>
+						<li><a href="#buy">Buy</a></li>
+						<li><a href="#sell">Sell</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+					<% if (isLoggedIn) { %>
+						<li class="dropdown">
+							<a class="dropdown-toggle" data-toggle="dropdown"
+								href="#">
+								My Account
+								<b class="caret"></b>
+							</a>
+							<ul class="dropdown-menu">
+								<li><a href="/sellers/<%=seller._id%>/view">Profile</a></li>
+								<li><a href="/sellers/<%=seller._id%>/vehicles">Vehicles</a></li>
+								<li class="divider"></li>
+								<li><a href="/?logout=true">Log out</a></li>
+							</ul>
+						</li>
+					<% } else { %>
+						<li><a href="/login">Login</a></li>
+						<li><a href="/sellers/add">Register</a></li>
+					<% } %>
+					</ul>
+				</div><!--/.nav-collapse -->
+			</div>
+		</nav>
+
 		<div class="container">
-		    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		    </a>
-		    <a class="brand" href="/">Boot&Bonnet</a>
-		    <div class="nav-collapse collapse">
-			<ul class="nav nav-pills">
-			    <li><a href="/">Home</a></li>
-			    <li><a href="#buy">Buy</a></li>
-			    <li><a href="#sell">Sell</a></li>
-			</ul>
-			<ul class="nav nav-pills pull-right">
-			    <% if (isLoggedIn) { %>
-			    <li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown"
-				   href="#">
-				    My Account
-				    <b class="caret"></b>
-				</a>
-				<ul class="dropdown-menu">
-				    <li><a href="/sellers/<%=seller._id%>/view">Profile</a></li>
-				    <li><a href="/sellers/<%=seller._id%>/vehicles">Vehicles</a></li>
-					<li class="divider"></li>
-				    <li><a href="/?logout=true">Log out</a></li>
-				</ul>
-			    </li>
-			    <% } else { %>
-			    <li><a href="/login">Login</a></li>
-			    <li><a href="/sellers/add">Register</a></li>
-			    <% } %>
-			</ul>
-		    </div><!--/.nav-collapse -->
+			<%-body -%>
 		</div>
-	    </div>
-	</div>
-	<div class="container">
-	    <%-body -%>
-	</div>
-	<script src="/static/bower_components/jquery/jquery.min.js"></script>
-	<script src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<%-scripts%>
+		<script src="/static/bower_components/jquery/jquery.min.js"></script>
+		<script src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+		<%-scripts%>
     </body>
 </html>
