--- a/views/login-form.ejs
+++ b/views/login-form.ejs
@@ -1,6 +1,6 @@
 <% layout('../views/layout') -%>
 
-<form method="post" action="/login">
+<form method="post" action="/login" role="form">
     <fieldset>
         <legend>Log In</legend>
 		<div class="alert alert-success" style="display: <%=resetDisplay%>;">
@@ -8,29 +8,23 @@
 			Your password has been reset successfully. You may now log in with your new password.
 		</div>
 		<div class="row">
-			<div class="span12">
-				<div class="control-group <%=loginErrors.emailAlertType%>">
-					<label class="control-label">Email</label>
-					<div class="controls">
-						<input type="email" name="user[emailAddress]" value="<%=loginErrors.emailAddress%>"
-							   required="required"/>
-						<span class="help-block" ><%=loginErrors.emailError%></span>
-					</div>
+			<div class="col-md-3">
+				<div class="form-group <%=loginErrors.emailAlertType%>">
+					<label for="email" class="control-label">Email</label>
+					<input type="email" name="user[emailAddress]" value="<%=loginErrors.emailAddress%>"
+						id="email" class="form-control" required>
+					<p class="help-block" ><%=loginErrors.emailError%></p>
 				</div>
 
-				<div class="control-group <%=loginErrors.passwordAlertType%>">
-					 <label class="control-label">Password</label>
-					<div class="controls">
-						<input type="password" name="user[password]" value="<%=loginErrors.password%>"
-							   required="required"/>
-						<span class="help-block" ><%=loginErrors.passwordError %></span>
-					</div>
+				<div class="form-group <%=loginErrors.passwordAlertType%>">
+					<label class="control-label">Password</label>
+					<input type="password" name="user[password]" value="<%=loginErrors.password%>"
+						id="password" class="form-control" required>
+					<p class="help-block" ><%=loginErrors.passwordError %></p>
 				</div>
 
-				<div class="controls">
-					<button type="submit" class="btn btn-primary" >Log in</button>
-					<a href="/password/forgot">Forgot password?</a>
-				</div>
+				<button type="submit" class="btn btn-primary" >Log in</button>
+				<a href="/password/forgot">Forgot password?</a>
 			</div>
 		</div>
     </fieldset>
