--- a/views/login-form.ejs
+++ b/views/login-form.ejs
@@ -4,8 +4,7 @@
     <fieldset>
         <legend>Log In</legend>
 		<div class="alert alert-success" style="display: <%=resetDisplay%>;">
-			<button type="button" class="close" data-dismiss="alert">&times;</button>
-			Your password has been reset successfully. You may now log in with your new password.
+			<strong>Your password has been reset successfully!</strong> You may now log in with your new password.
 		</div>
 		<div class="row">
 			<div class="col-md-3">
