--- a/views/error-page.ejs
+++ b/views/error-page.ejs
@@ -1,5 +1,9 @@
 <% layout('layout') -%>
 
-<h2>An error has occurred.</h2>
+<div class="page-header">
+	<h1>Error</h1>
+</div>
+
+<p class="lead">An error has occurred.</p>
 
 <p><%=error%></p>
