--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,11 +28,11 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">boot&bonnet</a>
+					<a class="navbar-brand" href="/">boot&bonnet</a>
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="#">Home</a></li>
+						<li class="active"><a href="/">Home</a></li>
 						<li><a href="#buy">Buy</a></li>
 						<li><a href="#sell">Sell</a></li>
 					</ul>
