--- a/views/login-form.ejs
+++ b/views/login-form.ejs
@@ -16,7 +16,7 @@
 				</div>
 
 				<div class="form-group <%=loginErrors.passwordAlertType%>">
-					<label class="control-label">Password</label>
+					<label for="password" class="control-label">Password</label>
 					<input type="password" name="user[password]" value="<%=loginErrors.password%>"
 						id="password" class="form-control" required>
 					<p class="help-block" ><%=loginErrors.passwordError %></p>
