--- a/views/seller-registration-form.ejs
+++ b/views/seller-registration-form.ejs
@@ -12,39 +12,40 @@ var provincesString = JSON.stringify(provinces);
 	please <a href="/login">log in</a>
 </div>
 
+<div class="page-header">
+	<h1><%=heading%></h1>
+</div>
+
 <form id="register" method="post" action="<%=action%>">
 	<input type="hidden" id="loggedIn" value="<%=isLoggedIn%>" />
-    <h2><%=heading%></h2>
     <fieldset>
 		<legend>Account credentials</legend>
 		<div class="row">
-			<div class="span6">
+			<div class="col-md-6">
 	<!-- Email address -->
-				<div id="divEmail" class="control-group <%=validationErrors.emailAlertType%>">
-					<label class="control-label" for="email">Email address</label>
-					<div class="controls">
-						<input type="email" id="email" name="user[emailAddress]" value="<%=user.emailAddress%>"/>
-						<span id="spanEmail" class="help-inline"><%=validationErrors.emailError%></span>
-					</div>
+				<div id="divEmail" class="form-group <%=validationErrors.emailAlertType%>">
+					<label for="email" class="control-label">Email address</label>
+					<input type="email" name="user[emailAddress]" value="<%=user.emailAddress%>" required
+						id="email" class="form-control">
+					<span id="spanEmail" class="help-inline"><%=validationErrors.emailError%></span>
 				</div>
 			</div>
-			<div class="span6">
+			<div class="col-md-6">
 	<!-- Password -->
-				<div id="divPassword" class="control-group <%=validationErrors.passwordAlertType%>">
-					<label class="control-label" for="password">Password</label>
-					<div class="controls">
-						<input type="password" id="password" name="user[password]" value="<%=user.password%>"/>
-						<span id="spanPassword" class="help-inline"><%=validationErrors.passwordError%></span>
-					</div>
+				<div id="divPassword" class="form-group <%=validationErrors.passwordAlertType%>">
+					<label for="password" class="control-label">Password</label>
+					<input type="password" name="user[password]" value="<%=user.password%>"
+						id="password" class="form-control"
+					>
+					<span id="spanPassword" class="help-inline"><%=validationErrors.passwordError%></span>
 				</div>
 	<!-- Confirm password -->
-				<div id="divConfirmPassword" class="control-group">
-					<label class="control-label" for="confirmPassword">Confirm password</label>
-					<div class="controls">
-						<input type="password" id="confirmPassword" name="user[confirmPassword]"
-							value="<%=user.password%>"/>
-						<span id="spanConfirmPassword" class="help-inline"></span>
-					</div>
+				<div id="divConfirmPassword" class="form-group">
+					<label for="confirmPassword" class="control-label">Confirm password</label>
+					<input type="password" name="user[confirmPassword]"	value="<%=user.password%>"
+						id="confirmPassword" class="form-control"
+					>
+					<span id="spanConfirmPassword" class="help-inline"></span>
 				</div>
 			</div>
 		</div>
@@ -52,49 +53,49 @@ var provincesString = JSON.stringify(provinces);
     <fieldset>
 		<legend>Contact information</legend>
 		<div class="row">
-			<div class="span6">
+			<div class="col-md-6">
 	<!-- First name -->
-				<div id="divFirstName" class="control-group <%=validationErrors.firstnameAlertType%>">
-					<label class="control-label" for="first_name">First name</label>
-					<div class="controls">
-						<input type="text" id="first_name" name="seller[contactPerson][firstname]"
-							value="<%=seller.contactPerson.firstname%>"/>
-						<span id="spanFirstName" class="help-inline"><%=validationErrors.firstnameError%></span>
-					</div>
+				<div id="divFirstName" class="form-group <%=validationErrors.firstnameAlertType%>">
+					<label for="first_name" class="control-label">First name</label>
+					<input type="text" name="seller[contactPerson][firstname]"
+						value="<%=seller.contactPerson.firstname%>"
+						id="first_name" class="form-control"
+					>
+					<span id="spanFirstName" class="help-inline"><%=validationErrors.firstnameError%></span>
 				</div>
 	<!-- Surname -->
-				<div id="divSurname" class="control-group <%=validationErrors.surnameAlertType%>">
-					<label class="control-label"  for="surname">Surname</label>
-					<div class="controls">
-						<input type="text" id="surname" name="seller[contactPerson][surname]"
-							value="<%=seller.contactPerson.surname%>"/>
-						<span id="spanSurname" class="help-inline"><%=validationErrors.surnameError%></span>
-					</div>
+				<div id="divSurname" class="form-group <%=validationErrors.surnameAlertType%>">
+					<label for="surname" class="control-label">Surname</label>
+					<input type="text" name="seller[contactPerson][surname]"
+						value="<%=seller.contactPerson.surname%>"
+						id="surname" class="form-control"
+					>
+					<span id="spanSurname" class="help-inline"><%=validationErrors.surnameError%></span>
 				</div>
 			</div>
-			<div class="span6">
+			<div class="col-md-6">
 				<div id="contactNumbersAlert" class="alert alert-error"
 						style="display: <%=validationErrors.contactNumbersAlertDisplay%>">
 					<button type="button" class="close" data-dismiss="alert">&times;</button>
-					Please supply either a telephone or a cellphone number, or both. Use only digits, e.g. 0123456789.
+					<strong>Error!</strong> Please supply either a telephone or a cellphone number, or both. Use only digits, e.g. 0123456789.
 				</div>
 	<!-- Telephone -->
-				<div id="divTelephone" class="control-group">
-					<label class="control-label" for="telephone">Telephone</label>
-					<div class="controls">
-						<input type="tel" id="telephone" name="seller[contactNumbers][telephone]"
-							value="<%=seller.contactNumbers[0]%>"/>
-						<span id="spanTelephone" class="help-inline">&nbsp;</span>
-					</div>
+				<div id="divTelephone" class="form-group">
+					<label for="telephone" class="control-label">Telephone</label>
+					<input type="tel"  name="seller[contactNumbers][telephone]"
+						value="<%=seller.contactNumbers[0]%>"
+						id="telephone" class="form-control"
+					>
+					<span id="spanTelephone" class="help-inline"></span>
 				</div>
 	<!-- Cellphone -->
-				<div id="divCellphone" class="control-group">
-					<label class="control-label" for="cellphone">Cell phone</label>
-					<div class="controls">
-						<input type="tel" id="cellphone" name="seller[contactNumbers][cellphone]"
-							value="<%=seller.contactNumbers[1]%>"/>
-						<span id="spanCellphone" class="help-inline">&nbsp;</span>
-					</div>
+				<div id="divCellphone" class="form-group">
+					<label for="cellphone" class="control-label">Cell phone</label>
+					<input type="tel"  name="seller[contactNumbers][cellphone]"
+						value="<%=seller.contactNumbers[1]%>"
+						id="cellphone" class="form-control"
+					>
+					<span id="spanCellphone" class="help-inline"></span>
 				</div>
 			</div>
 		</div>
@@ -107,20 +108,16 @@ var provincesString = JSON.stringify(provinces);
 			Please specify which type of seller you are by clicking either the Private seller option button or the
 			Dealership option button.
 		</div>
-		<div class="row">
 	<!-- Private seller -->
-			<div class="span3">
-				<label class="radio">
-					<input type="radio" id="privateSeller" name="seller[type]" value="private seller"/>Private seller
-				</label>
-			</div>
+		<label for="privateSeller" class="radio-inline">
+			<input type="radio" name="seller[type]" value="private seller" id="privateSeller">
+			Private seller
+		</label>
 	<!-- Dealership -->
-			<div class="span3">
-				<label class="radio">
-					<input type="radio" id="dealership"  name="seller[type]" value="dealership"/>Dealership
-				</label>
-			</div>
-		</div>
+		<label for="dealership" class="radio-inline">
+			<input type="radio" name="seller[type]" value="dealership" id="dealership">
+			Dealership
+		</label>
     </fieldset>
     <fieldset>
 		<legend id="dealerOrLocation">Location</legend>
@@ -129,69 +126,64 @@ var provincesString = JSON.stringify(provinces);
 			Please specify the province and town.
 		</div>
 		<div class="row">
-			<div class="span6" id="leftColumn">
+			<div class="col-md-6" id="leftColumn">
 				<div id="dealershipDetails" style="display: none">
 	<!-- Dealership name -->
-					<div class="control-group" >
-						<label class="control-label" for="dealershipName">Name</label>
-						<div class="controls">
-							<input type="text" id="dealershipName" name="seller[dealershipName]"
-								   value="<%=seller.dealershipName%>" />
-							<span class="help-inline"></span>
-						</div>
+					<div class="form-group" >
+						<label for="dealershipName" class="control-label">Name</label>
+						<input type="text"  name="seller[dealershipName]" value="<%=seller.dealershipName%>"
+							id="dealershipName" class="form-control"
+						>
+						<span class="help-inline"></span>
 					</div>
 	<!-- Street address -->
-					<div class="control-group">
-						<label class="control-label" for="street">Street address</label>
-						<div class="controls">
-							<input type="text" id="street" name="seller[address][street]"
-								   value="<%=seller.address.street%>" /><br />
-							<input type="text" id="suburb" name="seller[address][suburb]"
-								   value="<%=seller.address.suburb%>" />
-							<span class="help-inline"></span>
-						</div>
+					<div class="form-group">
+						<label for="street" class="control-label">Street address</label>
+						<input type="text"  name="seller[address][street]" value="<%=seller.address.street%>"
+							id="street" class="form-control"
+						>
+						<br>
+						<input type="text"  name="seller[address][suburb]" value="<%=seller.address.suburb%>"
+							id="suburb" class="form-control">
+						<span class="help-inline"></span>
 					</div>
 				</div>
 	<!-- Province -->
-				<div id="divProvinces" class="control-group <%=validationErrors.provinceAlertType%>">
-					<label class="control-label" for="provinces">Province</label>
-					<div class="controls">
-						<select id="provinces" name="seller[address][province]">
-						<% if (seller.address.province) { %>
-							<option selected="selected" value="<%=seller.address.province%>">
-								<%=seller.address.province%>
-							</option>
-						<% } else { %>
-							<option selected="selected">Please select ...</option>
-						<% } %>
-						<% for (p in provinces) { %>
-							<option value="<%=provinces[p].name%>"><%=provinces[p].name%></option>
-						<% } %>
-						</select>
-						<span id="spanProvinces" class="help-inline"><%=validationErrors.provinceError%></span>
-					</div>
+				<div id="divProvinces" class="form-group <%=validationErrors.provinceAlertType%>">
+					<label for="provinces" class="control-label">Province</label>
+					<select name="seller[address][province]" id="provinces" class="form-control">
+					<% if (seller.address.province) { %>
+						<option selected="selected" value="<%=seller.address.province%>">
+							<%=seller.address.province%>
+						</option>
+					<% } else { %>
+						<option selected="selected">Please select ...</option>
+					<% } %>
+					<% for (p in provinces) { %>
+						<option value="<%=provinces[p].name%>"><%=provinces[p].name%></option>
+					<% } %>
+					</select>
+					<span id="spanProvinces" class="help-inline"><%=validationErrors.provinceError%></span>
 				</div>
 			</div>
-			<div class="span6" id="rightColumn">
+			<div class="col-md-6" id="rightColumn">
 				<input type="hidden" id="locations" value="<%=provincesString%>" />
 	<!-- Town -->
-				<div id="divTowns" class="control-group <%=validationErrors.townAlertType%>">
-					<label class="control-label" for="towns">Town</label>
-					<div class="controls">
-						<select id="towns" name="seller[address][town]">
-						<% if (seller.address.town) { %>
-							<option selected="selected" value="<%=seller.address.town%>">
-								<%=seller.address.town%>
-							</option>
-						<% } else { %>
-							<option selected="selected">Please select ...</option>
-						<% } %>
-						</select>
-						<span id="spanTowns" class="help-inline"><%=validationErrors.townError%></span>
-					</div>
+				<div id="divTowns" class="form-group <%=validationErrors.townAlertType%>">
+					<label for="towns" class="control-label">Town</label>
+					<select name="seller[address][town]" id="towns" class="form-control">
+					<% if (seller.address.town) { %>
+						<option selected="selected" value="<%=seller.address.town%>">
+							<%=seller.address.town%>
+						</option>
+					<% } else { %>
+						<option selected="selected">Please select ...</option>
+					<% } %>
+					</select>
+					<span id="spanTowns" class="help-inline"><%=validationErrors.townError%></span>
 				</div>
 			</div>
-			</div>
+		</div>
     </fieldset>
 
     <div class="form-actions">
