--- a/views/seller-profile-page.ejs
+++ b/views/seller-profile-page.ejs
@@ -1,26 +1,23 @@
 <% layout('../views/layout') -%>
 
-<h2>My Profile</h2>
+<div class="page-header">
+	<h1>My Profile</h1>
+</div>
 
 <form method="get" action="/sellers/<%=seller._id%>/remove">
     <fieldset id="dealership" style="display: <%=dealerDisplay%>">
-		<p><i class="icon-briefcase"></i>&nbsp;<strong><%=seller.dealershipName%></strong></p>
+		<span class="glyphicon glyphicon-home"><strong> <%=seller.dealershipName%></strong></span><br>
 		<div class="row">
-			<div class="span4">
-				<p><i class="icon-road"></i>&nbsp;<%=seller.address.street%></p>
-				<p><i class="icon-road"></i>&nbsp;<%=seller.address.suburb%></p>
-				<p><i class="icon-map-marker"></i>&nbsp;<%=seller.address.town%></p>
-				<p><i class="icon-map-marker"></i>&nbsp;<%=seller.address.province%></p>
+			<div class="col-md-4">
+				<span class="glyphicon glyphicon-road"> <%=seller.address.street%>, <%=seller.address.suburb%></span>
+				<br>
+				<span class="glyphicon glyphicon-map-marker"> <%=seller.address.town%>, <%=seller.address.province%></span>
 			</div>
-			<div class="span4">
-				<div class="span6">
-					<p><i class="icon-user"></i>&nbsp;
-						<%=seller.contactPerson.firstname%>&nbsp;<%=seller.contactPerson.surname%></p>
-					<p><i class="icon-envelope"></i>&nbsp; <%=user.emailAddress%></p>
-				<% for (var i = 0; i < seller.contactNumbers.length; i++) { %>
-					<p><i class="icon-home"></i>&nbsp; <%=seller.contactNumbers[i]%></p>
-				<% } %>
-				</div>
+			<div class="col-md-4">
+				<span class="glyphicon glyphicon-user"> <%=seller.contactPerson.firstname%> <%=seller.contactPerson.surname%></span>
+				<span class="glyphicon glyphicon-envelope"> <%=user.emailAddress%></span>
+				<span class="glyphicon glyphicon-earphone"> <%=seller.contactNumbers[0]%></span><br>
+				<span class="glyphicon glyphicon-phone"> <%=seller.contactNumbers[1]%></span>
 			</div>
 		</div>
     </fieldset>
@@ -40,9 +37,8 @@
 			</div>
 		</div>
     </fieldset>
-    <div class="form-actions">
-		<a href="/sellers/<%=seller._id%>/edit" class="btn">Edit</a>
-		<button class="btn btn-link">Delete</button>
-		<a href="/vehicles/add" class="btn btn-primary pull-right">Advertise a Vehicle</a>
-    </div>
+
+	<a href="/sellers/<%=seller._id%>/edit" class="btn btn-primary">Edit</a>
+	<button class="btn btn-default">Delete</button>
+	<a href="/vehicles/add" class="btn btn-success">Advertise a Vehicle</a>
 </form>
