Changed Cancel button on seller registration form to a link. The page containing the seller registraion form will not necessary be loaded by clicking the Edit button on the seller profile page. It could also be loaded by entering the URL into the address bar.

--- a/views/seller-profile-page.ejs
+++ b/views/seller-profile-page.ejs
@@ -14,10 +14,10 @@
 				<span class="glyphicon glyphicon-map-marker"> <%=seller.address.town%>, <%=seller.address.province%></span>
 			</div>
 			<div class="col-md-4">
-				<span class="glyphicon glyphicon-user"> <%=seller.contactPerson.firstname%> <%=seller.contactPerson.surname%></span>
-				<span class="glyphicon glyphicon-envelope"> <%=user.emailAddress%></span>
+				<span class="glyphicon glyphicon-user"> <%=seller.contactPerson.firstname%> <%=seller.contactPerson.surname%></span><br>
+				<span class="glyphicon glyphicon-envelope"> <%=user.emailAddress%></span><br>
 				<span class="glyphicon glyphicon-earphone"> <%=seller.contactNumbers[0]%></span><br>
-				<span class="glyphicon glyphicon-phone"> <%=seller.contactNumbers[1]%></span>
+				<span class="glyphicon glyphicon-phone"> <%=seller.contactNumbers[1]%></span><br>
 			</div>
 		</div>
     </fieldset>
