--- a/views/seller-registration-form.ejs
+++ b/views/seller-registration-form.ejs
@@ -188,6 +188,6 @@ var provincesString = JSON.stringify(provinces);
 
     <div class="form-actions">
 		<button type="submit" class="btn btn-primary" ><%=buttonCaption%></button>
-		<button type="button" class="btn btn-default" id="cancelButton" >Cancel</button>
+		<a href="/sellers/<%=seller._id%>/view" id="cancelButton" class="btn btn-default">Cancel</a>
     </div>
 </form>
