--- a/views/home-page.ejs
+++ b/views/home-page.ejs
@@ -1,5 +1,5 @@
 <% layout('layout') -%>
-<% script('/static/js/home.js') -%>
+<% script('/static/js/home-page.js') -%>
 
 <div class="page-header">
 	<h1>Welcome</h1>
